--- a/2.html
+++ b/2.html
@@ -4,7 +4,7 @@
     <title>Document</title>
 </head>
 <body>
-    <form action="/2.php" method="get">
+    <form action="/2.php" method="GET">
         이름: <br>
         <input type="text" name="name" placeholder="테스트">
         <button type="submit">Submit</button>
